--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,7 +22,7 @@ html,body {
   font-size: 1.1em !important;
 }
 .carousel-inner {
-  height: 100%;
+  /* height: 100%; */
   width: 100%;
 }
 .carousel-caption {
@@ -95,7 +95,7 @@ hr.last {
 @media (max-width: 768px) {
   .carousel-caption {
   top: 45%;
-  
+
 }
 .carousel-caption h1 {
   font-size: 300%;
@@ -108,7 +108,7 @@ hr.last {
     font-size: 2.5em;
     padding: 1.2rem;
   }
-  
+
 }
 @media (max-width: 576px) {
   .navbar-brand.mb-0.h1 {
@@ -121,7 +121,7 @@ hr.last {
     padding-top: 2px;
     padding-bottom: 2px;
   }
- 
+
   .navbar-toggler-icon {
   align-content: right;
   font-size: 50%;
@@ -132,7 +132,7 @@ hr.last {
  }
   .carousel-caption {
   top: 30%;
-  
+
   }
   .carousel-caption h1 {
   font-size: 170%;
@@ -212,11 +212,3 @@ Large (lg) devices (desktops, 992px and up)
 Extra (xl) large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) { ... }
 */
-
-
-
-
-
-
-
-
