--- a/templates/index.html
+++ b/templates/index.html
@@ -24,10 +24,10 @@
       <a class="nav-link" href="#">Home</a>
   		</li>
       <li class="nav-item">
-      <a class="nav-link" href="#">About</a>
+      <a class="nav-link" href="#About">About</a>
   		</li>
       <li class="nav-item">
-      <a class="nav-link" href="#">Registration</a>
+      <a class="nav-link" href="#registration">Registration</a>
   		</li>
    		<li class="nav-item">
       <a class="nav-link" href="#contact_us">Contact Us</a>
@@ -74,7 +74,7 @@
 <div class="container-fluid padding">
 	<div class="row padding">
 		<div class="col-lg-6">
-			<h1 class="display-6">About Gec Sreekrishnapuram</h1>
+			<h1 class="display-6" id="About">About Gec Sreekrishnapuram</h1>
 		</div>
 		<br>
 		<br>
@@ -187,13 +187,14 @@
 			<h2 id="contact_us">Contact Us</h2>
 			<hr class="light">
 			<p>Anoop cs</p>
-			<p>555-555-555</p>
-			<p>etc@gmail.com</p>
+			<p>Assistant Professor, </p>
+			<p>Dept. of Electronics and Communication Engg.</P>
+			<p>anoopcs@gecskp.ac.in</p>
 			<p>Placement cell</p>
 			</div>
 			<div class="col-12">
 				<hr class="last">
-				<h5>&copy; placement cell gecskp</h5>
+				<h5>&copy; HOBBY CLUB</h5>
 			</div>
 		</div>
 	</div>
