--- a/mainapp/templates/mainapp/register.html
+++ b/mainapp/templates/mainapp/register.html
@@ -1,8 +1,9 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
 	<title>register here</title>
-	<link rel="stylesheet" type="text/css" href="first.css">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/first.css' %}">
 	<link href="https://fonts.googleapis.com/css?family=Audiowide|Averia+Libre" rel="stylesheet">
 </head>
 <body>
