--- a/static/css/first.css
+++ b/static/css/first.css
@@ -1,6 +1,9 @@
 body{
 	background-image: url(form.jpg);
 	background-size: cover;
+	background-repeat: no-repeat;
+    background-attachment: fixed;
+
 	/*display: block;*/
 	/*margin: auto;*/
 }
@@ -48,7 +51,7 @@ body{
     border-style: solid;
     background-color:#163248;
     opacity: 0.8;
-    /*color:#FFFFFF;*/
+    color:#FFFFFF;
     font-weight: 1000;
     width: 300px;
     /*text-align: center;*/
@@ -63,7 +66,7 @@ body{
     opacity: 0.8;
     color:#62717D;
     font-weight: 1000;
-    width: 315px;
+    width: 300px;
 
 
 }
@@ -120,7 +123,7 @@ body{
 
 
 label{
-	color: #FFFFFF;
+	color: #0A6DD3;
 
 }
 .col1{
@@ -128,11 +131,7 @@ label{
 	float: left;
 	
 	width: 50%;
-	/*text-align:center;*/
-
-	/*padding-left:10px;*/
-	/*height: 100%;*/
-	/*-webkit-column-gap: 10px;*/
+	
 }
 
 
@@ -147,14 +146,16 @@ label{
 }
 #biginp{
 	padding: 5px;
+	float: left;*/
+    padding-left : 265px;
     border-color: #10212E;
     border-radius: 5px;
     border-style: solid;
     background-color:#163248;
     opacity: 0.8;
-    /*color:#FFFFFF;*/
+    color:#FFFFFF;
     font-weight: 1000;
-    width: 957px;
+    width: 760px;
 }
 #bigselect{
 	padding: 5px;
@@ -166,33 +167,58 @@ label{
     color:#62717D;
     font-weight: 1000;
     width: 967px;
+    /*float: left;*/
+    /*padding-left : 265px;*/
     text-align: center;
 
 
-}#que{
+}
+#que{
 	float: left;
 	padding-top: 10px;
-	padding-left : 165px;
+	padding-left : 265px;
 	font-size: 20px;
 	font-weight: 900;	
-	color: #FFFFFF;
+	color: #0A6DD3;
+	text-shadow:1px 1px #000000;
+	font-family: 'Josefin Sans', sans-serif;
+	width: 1050px;
+
+}
+ #button1{
+	text-align: center;
+	bottom: 10px;
+	float: left;
+	padding-top: 50px;
+	padding-left :46%;
+	padding-bottom: 50px;
+	font-size: 20px;
+	font-weight: 900;
+	/*background-color: #F49445;	*/
+	color: #FFF007;
 	text-shadow:1px 1px #000000;
 	font-family: 'Averia Libre';
-
-}
-
-#
-#button{
-	background-color: #0A5E9F;
-	border-color: #0A5E9F;
-	border-radius: 5px;
-	font-family:'Averia Libre';
-	color: #FFFFFF;
-	width: 100px; 
+	
 
 }
 
 
+
+
+
+
+#subq{
+	float: left;
+	padding-top: 10px;
+	padding-left : 290px;
+	font-size: 20px;
+	font-weight: 900;	
+	color: #0A6DD3;
+	text-shadow:1px 1px #000000;
+	font-family: 'Josefin Sans', sans-serif;
+
+
+}
 
 
 
