--- a/mainapp/templates/mainapp/register.html
+++ b/mainapp/templates/mainapp/register.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,10 +8,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="first.css">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/first.css' %}">
 	<link href="https://fonts.googleapis.com/css?family=Audiowide|Averia+Libre|Josefin+Sans" rel="stylesheet">
-	<script src="reg.js"></script>
-	<script src="reg1.js"></script>
+	<script src="{% static 'js/reg.js' %}"></script>
+	<script src="{% static 'js/reg1.js' %}"></script>
 </head>
 <body>
 	<div class="register">
