--- a/static/css/first.css
+++ b/static/css/first.css
@@ -14,20 +14,20 @@ body{
 	color: #FFFFFF;
 	font-family: 'Audiowide';
 }
-	
+
 .register{
 	/*text-align: center;*/
 	text-transform: uppercase;
-	
-}	
-	
-	
+
+}
+
+
 
 
 #heading{
 	text-align: center;
 	font-size: 20px;
-	font-weight: 900;	
+	font-weight: 900;
 	color: #0A6DD3;
 	text-shadow:1px 1px #000000;
 	font-family: 'Averia Libre';
@@ -50,9 +50,9 @@ body{
     border-color: #10212E;
     border-radius: 5px;
     border-style: solid;
-    background-color:#163248;
+    background-color:#FFFFFF;
     opacity: 0.8;
-    color:#FFFFFF;
+    color:#484A4F;
     font-weight: 1000;
     width: 300px;
     text-transform: uppercase;
@@ -64,28 +64,30 @@ body{
     border-color: #10212E;
     border-radius: 5px;
     border-style: solid;
-    background-color:#163248;
+    background-color:#FFFFFF;
     opacity: 0.8;
-    color:#62717D;
+    color:#484A4F;
+
     font-weight: 1000;
     width: 300px;
+		text-transform: uppercase;
 
 
 }
 ::placeholder {
-    /*color:#FF0101;*/
+    color:#484A4F;
     opacity: 1; /* Firefox */
     font-weight: 1000;
 }
 
 :-ms-input-placeholder { /* Internet Explorer 10-11 */
-   /*color:#B20000;*/
+   color:#484A4F;
    font-weight: 1000;
 }
 
 
 ::-ms-input-placeholder { /* Microsoft Edge */
-   /*color:#B20000;*/
+   color:#484A4F;
    font-weight: 1000;
 }
 
@@ -95,10 +97,11 @@ body{
     border-color: #10212E;
     border-radius: 5px;
     border-style: solid;
-    background-color:#163248;
+    background-color:#FFFFFF;
     opacity: 0.8;
-    color:#62717D;
+    color:#484A4F;
     font-weight: 1000;
+		text-transform: uppercase;
 
 }
 #cont{
@@ -107,10 +110,11 @@ body{
     border-color: #10212E;
     border-radius: 5px;
     border-style: solid;
-    background-color:#163248;
+    background-color:#FFFFFF;
     opacity: 0.8;
-    color:#FFFFFF;
+    color:#484A4F;
     font-weight: 1000;
+		text-transform: uppercase;
 }
 
 #des{
@@ -119,7 +123,7 @@ body{
     border-style: solid;
     background-color:#163248;
     opacity: 0.8;
-    color:#FFFFFF;
+    color:#484A4F;
     font-weight: 1000;
     }
 
@@ -131,9 +135,9 @@ label{
 .col1{
 
 	float: left;
-	
+
 	width: 50%;
-	
+
 }
 
 
@@ -153,9 +157,9 @@ label{
     border-color: #10212E;
     border-radius: 5px;
     border-style: solid;
-    background-color:#163248;
+    background-color:#FFFFFF;
     opacity: 0.8;
-    color:#FFFFFF;
+    color:#484A4F;
     font-weight: 1000;
     width: 760px;
 }
@@ -164,9 +168,9 @@ label{
     border-color: #10212E;
     border-radius: 5px;
     border-style: solid;
-    background-color:#163248;
+    background-color:#FFFFFF;
     opacity: 0.8;
-    color:#62717D;
+    color:#484A4F;
     font-weight: 1000;
     width: 967px;
     /*float: left;*/
@@ -179,8 +183,8 @@ label{
 	float: left;
 	padding-top: 10px;
 	padding-left : 265px;
-	font-size: 20px;
-	font-weight: 900;	
+	font-size: 17px;
+	font-weight: 900;
 	color: #0A6DD3;
 	text-shadow:1px 1px #000000;
 	font-family: 'Josefin Sans', sans-serif;
@@ -200,7 +204,7 @@ label{
 	color: #FFF007;
 	text-shadow:1px 1px #000000;
 	font-family: 'Averia Libre';
-	
+
 
 }
 
@@ -214,7 +218,7 @@ label{
 	padding-top: 10px;
 	padding-left : 290px;
 	font-size: 20px;
-	font-weight: 900;	
+	font-weight: 900;
 	color: #0A6DD3;
 	text-shadow:1px 1px #000000;
 	font-family: 'Josefin Sans', sans-serif;
@@ -225,12 +229,12 @@ label{
 
 
 @media screen and (max-width:600px) {
-                                                                                                         
+
     .col1,.col2,.register,#pad1,#bigselect,#form{
         width: 100%;
         margin-top: 0%;
         padding :0px;
         /*float: center;*/
         text-align: center;
-        
-    }                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    
+
+    }
