--- a/static/css/first.css
+++ b/static/css/first.css
@@ -105,7 +105,7 @@ body{
 
 }
 #cont{
-	width: 229px;
+	width: 200px;
 	padding: 5px;
     border-color: #10212E;
     border-radius: 5px;
@@ -230,6 +230,11 @@ label{
 
 @media screen and (max-width:600px) {
 
+#header {
+font-size :180%;
+}
+
+
     .col1,.col2,.register,#pad1,#bigselect,#form{
         width: 100%;
         margin-top: 0%;
@@ -238,3 +243,4 @@ label{
         text-align: center;
 
     }
+}
