--- a/templates/index.html
+++ b/templates/index.html
@@ -162,6 +162,32 @@
 
 		</div>
 </div>
+<br>
+<br>
+<!-- Placement Broshure -->
+<div class="container-fluid padding">
+	<div class="row welcome text-center">
+		<div class="col-12">
+			<h1>Placement Brochure</h1>
+		</div>
+		<hr class="my-4">
+	</div>
+</div>
+<!-- card -->
+<div class="container-fluid padding">
+	<div class="row padding">
+	<div class="col d-flex justify-content-center">
+		<div class="card">
+			<img class="card-img-top" src="img/placement.jpg">
+			<div class="card-body">
+				<p class="card-text">this is an example of placement brochure.</p>
+				<a href="img/placement.jpg" class="btn btn-outline-secondary" download>Download</a>
+			</div>
+		</div>
+	</div>
+</div>
+</div>
+
 <hr class="my-4">
 </div>
 <br>
