--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,7 +22,7 @@ html,body {
   font-size: 1.1em !important;
 }
 .carousel-inner {
-  /* height: 100%; */
+  height: 100%;
   width: 100%;
 }
 .carousel-caption {
@@ -47,6 +47,10 @@ html,body {
 .btn-primary:hover {
   background-color: #563d7c;
   border: #563d7c;
+}
+.card-img-top {
+  height: 350px;
+  width: 325px;
 }
 .social a {
   font-size: 2.5em;
@@ -95,7 +99,7 @@ hr.last {
 @media (max-width: 768px) {
   .carousel-caption {
   top: 45%;
-
+  
 }
 .carousel-caption h1 {
   font-size: 300%;
@@ -108,7 +112,7 @@ hr.last {
     font-size: 2.5em;
     padding: 1.2rem;
   }
-
+  
 }
 @media (max-width: 576px) {
   .navbar-brand.mb-0.h1 {
@@ -121,7 +125,7 @@ hr.last {
     padding-top: 2px;
     padding-bottom: 2px;
   }
-
+ 
   .navbar-toggler-icon {
   align-content: right;
   font-size: 50%;
@@ -132,7 +136,7 @@ hr.last {
  }
   .carousel-caption {
   top: 30%;
-
+  
   }
   .carousel-caption h1 {
   font-size: 170%;
@@ -146,6 +150,10 @@ hr.last {
  }
    .display-6 {
     font-size: 160%;
+  }
+
+  .placement {
+  font-size: 150%;
   }
 }
 
@@ -212,3 +220,11 @@ Large (lg) devices (desktops, 992px and up)
 Extra (xl) large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) { ... }
 */
+
+
+
+
+
+
+
+
