--- a/mainapp/templates/mainapp/register.html
+++ b/mainapp/templates/mainapp/register.html
@@ -171,10 +171,10 @@
 				Do you think that has helped in building your career?<br>
 
 				<div class="radio">
-                    <label><input id="radio" type="radio" name="optradio" checked>YES</label>
+                    <label><input id="radio" type="radio" name="que1" value="yes" checked>YES</label>
                 </div>
                 <div class="radio">
-                    <label><input id="radio" type="radio" name="optradio">NO</label>
+                    <label><input id="radio" type="radio" name="que1" value="no">NO</label>
                 </div><br>
 			</div>
 			<div class="q1" id="que">
@@ -189,27 +189,27 @@
 				4.Will you be interested in mentoring some of our students in your domain?<br>
 
 				<div class="radio">
-                    <label><input id="radio" type="radio" name="optradio" checked>YES</label>
+                    <label><input id="radio" type="radio" name="que4" value="yes" checked>YES</label>
                 </div>
                 <div class="radio">
-                    <label><input id="radio" type="radio" name="optradio">NO</label>
+                    <label><input id="radio" type="radio" name="que4" value="no" >NO</label>
                 </div><br>
 			</div>
 			<div class="container" id="que">
 				5.Would you be interested in visiting our campus for a technical talk to our present students?<br>
 
 				<div class="radio">
-                    <label><input id="radio" type="radio" name="optradio" checked>YES</label>
+                    <label><input id="radio" type="radio" name="que5" value="yes" checked>YES</label>
                 </div>
                 <div class="radio">
-                    <label><input id="radio" type="radio" name="optradio">NO</label>
+                    <label><input id="radio" type="radio" name="que5" value="no" >NO</label>
                 </div><br>
 			</div>
 			<div class="container" id="que">
 				6.Are you aware of any companies in your domain which are looking for freshers?<br>
 
 				<div class="radio">
-                    <label id="shown"><input id="radio" type="radio" name="optradio" >YES</label>
+                    <label id="shown"><input id="radio" type="radio" name="que6" value="yes" >YES</label>
                 </div>
                 <div class="sh" >
 				    Can you provide the company/HR details?<br>
@@ -217,14 +217,14 @@
 			    </div>
 
                 <div class="radio">
-                    <label id="hidden"><input id="radio" type="radio" name="optradio">NO</label>
+                    <label id="hidden"><input id="radio" type="radio" name="que6" value="no">NO</label>
                 </div><br>
 			</div>
 			<div class="container" id="que">
 				7.Are you in a position(in your company)to help the recruitments in our campus?<br>
 
 				<div class="radio">
-                    <label id="show"><input id="radio" type="radio" name="optradio" >YES</label>
+                    <label id="show"><input id="radio" type="radio" name="que7" value="yes" >YES</label>
                 </div>
                 <div class="sh1" >
 				    Will you recomment our institution to the company?<br>
@@ -232,7 +232,7 @@
 			    </div>
 
                 <div class="radio">
-                    <label id="hide"><input id="radio" type="radio" name="optradio">NO</label>
+                    <label id="hide"><input id="radio" type="radio" name="que7" value="no">NO</label>
                 </div>
                 <div class="sh2" >
 				    Can you suggest how we can approach your HR?<br>
