--- a/mainapp/templates/mainapp/register.html
+++ b/mainapp/templates/mainapp/register.html
@@ -75,7 +75,7 @@
                         <option value="OTHERS">Others</option>
                     </select><br><br>
                     <!-- contact with country code -->
-                    <input id="selection" type="text" name="Contact" placeholder="code" required>
+                    <!-- <input id="selection" type="text" name="Contact" placeholder="code" required> -->
 
                     <input id="cont" type="text" name="Contact" placeholder="contact no." required><br><br>
                     <!-- passout year -->
