--- a/static/css/first.css
+++ b/static/css/first.css
@@ -1,5 +1,5 @@
 body{
-	background-image: url(form.jpg);
+	background-image: url(form.JPG);
 	background-size: cover;
 	background-repeat: no-repeat;
     background-attachment: fixed;
@@ -105,7 +105,7 @@ body{
 
 }
 #cont{
-	width: 200px;
+	width: 300px;
 	padding: 5px;
     border-color: #10212E;
     border-radius: 5px;
