--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
     </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="{% static 'images/college1.jpg' %}" alt="Second slide">
+      <img class="d-block w-100" src="{% static 'images/college1.JPG' %}" alt="Second slide">
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="{% static 'images/invento.jpg' %}" alt="Third slide">
@@ -178,10 +178,10 @@
 	<div class="row padding">
 	<div class="col d-flex justify-content-center">
 		<div class="card">
-			<img class="card-img-top" src="img/placement.jpg">
+			<img class="card-img-top" src="{% static 'images/placement.jpg' %}">
 			<div class="card-body">
 				<p class="card-text">this is an example of placement brochure.</p>
-				<a href="img/placement.jpg" class="btn btn-outline-secondary" download>Download</a>
+				<a href="{% static 'images/placement.jpg' %}" class="btn btn-outline-secondary" download>Download</a>
 			</div>
 		</div>
 	</div>
