--- a/mainapp/templates/mainapp/register.html
+++ b/mainapp/templates/mainapp/register.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load crispy_forms_tags %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -12,8 +13,25 @@
 	<link href="https://fonts.googleapis.com/css?family=Audiowide|Averia+Libre|Josefin+Sans" rel="stylesheet">
 	<script src="{% static 'js/reg.js' %}"></script>
 	<script src="{% static 'js/reg1.js' %}"></script>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </head>
 <body>
+	{% if form.errors %}
+    {% for field in form %}
+        {% for error in field.errors %}
+            <div class="alert alert-danger">
+                <strong>{{ error|escape }}</strong>
+            </div>
+        {% endfor %}
+    {% endfor %}
+    {% for error in form.non_field_errors %}
+        <div class="alert alert-danger">
+            <strong>{{ error|escape }}</strong>
+        </div>
+    {% endfor %}
+{% endif %}
+
 	<!--<div class="register container-fluid">-->
 		<!--<div id="header">ALUMNI REGISTRATION FORM</div><br></div>-->
 	<div class="container-fluid padding">
@@ -24,7 +42,10 @@
 	</div>
 	</div>
 	<div class="container-fluid">
-		<form id="form" method="post">
+		<form action="/form" id="form" method="post">
+
+			{% csrf_token %}
+
 			<!-- alumni details -->
 			<div id="heading">
 		 		ALUMNI DETAILS
@@ -36,17 +57,22 @@
 				<!--<div id="pad1">-->
 					<div class="col-sm-12 col-lg-6">
 				<!-- name and email -->
-			        <input id="input" type="text" name="name" placeholder="Name" required><br><br>
-			        <input id="input" type="Email" name="Email" placeholder="Email" required><br><br>
+			        <!-- <input id="input" type="text" name="name" placeholder="Name" required><br><br>
+			        <input id="input" type="Email" name="Email" placeholder="Email" required><br><br> -->
+							{{ form.name|as_crispy_field }}
+							{{ form.email|as_crispy_field }}
 			        <!-- course details -->
-			        <select id="select">
+			        <!-- <select id="select">
 
     			        <option value="COURSE">Course</option>
     				    <option value="BTECH">BTECH</option>
                         <option value="MTECH">MTECH</option>
-    			    </select><br><br>
+    			    </select><br><br> -->
+
+							{{ form.course|as_crispy_field }}
+							{{form.branch|as_crispy_field }}
     			    <!-- branch -->
-    			    <select id="select" >
+    			    <!-- <select id="select" >
 
     				    <option value="BRANCH">Branch</option>
     				    <option value="MECH">MECH</option>
@@ -54,8 +80,9 @@
     				    <option value="IT">IT</option>
     				    <option value="ECE">ECE</option>
     				    <option value="EEE">EEE</option>
-			        </select><br><br>
+			        </select><br><br>-->
 			    </div>
+
 
 
 			<!-- col1 ends and col2 satrts -->
@@ -64,22 +91,26 @@
 				<!--<div id="pad2">-->
 
 			        <!-- register no -->
-			        <input id="input" type="text" name="reg.no." placeholder="Reg.No." ><br><br>
+			        <!-- <input id="input" type="text" name="reg.no." placeholder="Reg.No." ><br><br> -->
+							{{ form.reg|as_crispy_field }}
 			        <!-- gender -->
-                    <select id="select">
+                    <!-- <select id="select">
 
 
     				    <option value="GENDER">Gender</option>
     				    <option value="MALE">Male</option>
                         <option value="FEMALE">Female</option>
                         <option value="OTHERS">Others</option>
-                    </select><br><br>
+                    </select><br><br> -->
+										{{ form.gender|as_crispy_field }}
                     <!-- contact with country code -->
                     <!-- <input id="selection" type="text" name="Contact" placeholder="code" required> -->
 
-                    <input id="cont" type="text" name="Contact" placeholder="contact no." required><br><br>
+                    <!-- <input id="cont" type="text" name="Contact" placeholder="contact no." required><br><br> -->
+										{{ form.number|as_crispy_field }}
                     <!-- passout year -->
-                    <input id="input" type="text" name="passout" placeholder="Year of graduation" required><br><br><br><br>
+                    <!-- <input id="input" type="text" name="passout" placeholder="Year of graduation" required><br><br><br><br> -->
+										{{ form.grad|as_crispy_field }}
                 </div>
 
 
@@ -98,15 +129,17 @@
 					<div class="col-sm-12 col-lg-6">
             	<!--<div id="pad1">-->
             	    <!-- current organisation -->
-			        <input id="input" type="text" name="Currentorg" placeholder="Current Organisation" required><br><br>
+			        <!-- <input id="input" type="text" name="Currentorg" placeholder="Current Organisation" required><br><br> -->
+							{{ form.custatus|as_crispy_field }}
 			        <!-- job domain -->
-			        <select id="select" >
+			        <!-- <select id="select" >
 				        <option  value="JOB DOMAIN">Job Domain</option><option  value="opt1"></option>
 				        <option  value="MECHANICAL">MECHANICAL</option>
 				        <option  value="CS&IT">COMPUTER SCIENCE & IT</option>
 				        <option  value="ELECTRONICS">ELECTRONICS</option>
 				        <option  value="ELECTRICAL">ELECTRICAL</option>
-                    </select><br><br>
+                    </select><br><br> -->
+										{{ form.domain|as_crispy_field }}
                 </div>
 
             <!-- column1 ends -->
@@ -116,7 +149,8 @@
 				<!--<div id="pad2">-->
 
 				    <!-- designation  -->
-				    <input id="input" type="text" name="Currentdes" placeholder="Current Designation" required><br><br><br><br><br>
+				    <!-- <input id="input" type="text" name="Currentdes" placeholder="Current Designation" required><br><br><br><br><br> -->
+						{{ form.desig|as_crispy_field }}
 				</div>
 			</div>
 			</div>
@@ -132,10 +166,12 @@
 					<div class="col-sm-12 col-lg-6">
 				<!--<div id="pad1">-->
 					<!-- degree -->
-					<input id="input" type="text" name="degree" placeholder="degree" ><br><br>
+					<!-- <input id="input" type="text" name="degree" placeholder="degree" ><br><br> -->
+					{{ form.degree|as_crispy_field }}
 
 				    <!-- university -->
-                    <input id="input" type="text" name="university" placeholder="university name" ><br><br>
+                    <!-- <input id="input" type="text" name="university" placeholder="university name" ><br><br> -->
+										{{ form.univname|as_crispy_field }}
                 </div>
 
 			<!-- column1 ends -->
@@ -144,30 +180,36 @@
 				<!--<div id="pad2">-->
 					<div class="col-sm-12 col-lg-6">
 					<!-- current status -->
-							<select id="select" >
+							<!-- <select id="select" >
 							<option  value="CURRENT">CURRENT STATUS</option>
 
 							<option  value="COMPLETED">COMPLETED</option>
 							<option  value="PERSUING">PERSUING</option>
 							<option  value="NOT OPTED">NOT OPTED</option>
-					</select><br><br>
+					</select><br><br> -->
+					{{ form.custatus|as_crispy_field }}
 				    <!-- country name -->
-				   <input id="input" type="text" name="Country" placeholder="Country" required><br><br>
+				   <!-- <input id="input" type="text" name="Country" placeholder="Country" required><br><br> -->
                 </div>
 
 			</div>
 			</div>
 
+			<div  id="button1">
+					<button type="submit" class="btn btn-primary btn-md">SUBMIT</button>
+			</div>
+
 			<!-- column2 ends -->
 			<!-- question starts -->
-			<div class="container-fluid padding">
+			<!-- <div class="container-fluid padding">
 				<div class="col-12">
 			<!--<div class="questions">-->
-			<div class="q1" id="que">
+			<!-- <div class="q1" id="que">
 				1.What did you do in the year immediately after graduating?<br><br>
 				<textarea id="biginp" rows="2" cols="30" ></textarea></div>
 			<br><br>
-			<div class="container" id="que">
+		 -->
+			<!-- <div class="container" id="que">
 				Do you think that has helped in building your career?<br>
 
 				<div class="radio">
@@ -176,8 +218,8 @@
                 <div class="radio">
                     <label><input id="radio" type="radio" name="que1" value="no">NO</label>
                 </div><br>
-			</div>
-			<div class="q1" id="que">
+			</div> -->
+			<!-- <div class="q1" id="que">
 				2.What are the skills/tools fresher must acquaint with before entering your field?<br><br>
 				<textarea id="biginp" rows="2" cols="30" ></textarea>
 			</div><br>
@@ -244,11 +286,11 @@
 
 			</div>
 				</div>
-		</div><br>
+		</div><br> --> -->
 		<!-- question ends -->
-			<div  id="button1">
+			<!-- <div  id="button1">
 			    <button type="submit" class="btn btn-primary btn-md">SUBMIT</button>
-			</div>
+			</div> -->
 
 
 
