--- a/mainapp/templates/mainapp/register.html
+++ b/mainapp/templates/mainapp/register.html
@@ -73,7 +73,7 @@
 <!--
 							{{ form.course|as_crispy_field }}
 							{{form.branch|as_crispy_field }} -->
-								{% render_field form.course class="input" placeholder=course.label %}
+								{% render_field form.course class="input" placeholder=form.course.label %}
 									{% render_field form.branch class="input" placeholder=form.branch.label %}
     			    <!-- branch -->
     			    <!-- <select id="select" >
