--- a/static/css/first-new.css
+++ b/static/css/first-new.css
@@ -1,5 +1,16 @@
+body{
+	background: #c850c0;
+  background: -webkit-linear-gradient(45deg, #4158d0, #c850c0);
+  background: -o-linear-gradient(45deg, #4158d0, #c850c0);
+  background: -moz-linear-gradient(45deg, #4158d0, #c850c0);
+  background: linear-gradient(45deg, #4158d0, #c850c0);
+}
 .simple-form {
 	width:70%;
   margin-left: 10%;
   margin-right: 10%;
+
+}
+.control-label{
+	color: #ffffff;
 }
