--- a/mainapp/templates/mainapp/register1.html
+++ b/mainapp/templates/mainapp/register1.html
@@ -4,6 +4,7 @@
 {% bootstrap_javascript %}
 <head>
 	<link rel="stylesheet" type="text/css" href="{% static 'css/first-new.css' %}">
+  <link href="https://fonts.googleapis.com/css?family=Audiowide" rel="stylesheet">
 </head>
   <form method="post"  class="simple-form">
    <div class="heading">
