--- a/mainapp/templates/mainapp/register1.html
+++ b/mainapp/templates/mainapp/register1.html
@@ -5,6 +5,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="{% static 'css/first-new.css' %}">
   <link href="https://fonts.googleapis.com/css?family=Audiowide" rel="stylesheet">
+	<link rel="icon" href="{% static 'images/alumin.jpg' %}">
 </head>
 <body background="{% static 'css/form.JPG' %}">
   <form method="post"  class="simple-form">
