facebook and linkedin

--- a/templates/index.html
+++ b/templates/index.html
@@ -200,8 +200,8 @@
 			<h2>Connect</h2>
 		</div>
 		<div class="col-12 social padding">
-			<a href="#"><i class="fab fa-facebook"></i></a>
-			<a href="#"><i class="fab fa-linkedin"></i></a>
+			<a href="https://lm.facebook.com/l.php?u=https%3A%2F%2Ffb.me%2Fgecskpalumniportal&h=AT0tJ-8H0Cp5oc5L9R03l-mm7ebu6LRf0fE1ulOE1O7uqMmaum7ZWZH1HUBV-hwGVxpT_cKMiAL-icS1vP3gjZRZ2SZiJDSDq69YeHCLiYlLxnj16Cg4yqdnlMJv8wyvWpUmSJEv22Z9Iybc2Rmc"><i class="fab fa-facebook"></i></a>
+			<a href="https://www.linkedin.com/in/tpo-gec-sreekrishnapuram-3b11a1114"><i class="fab fa-linkedin"></i></a>
 			<a href="#"><i class="fab fa-google-plus-g"></i></a>
 		</div>
 	</div>
