--- a/templates/index.html
+++ b/templates/index.html
@@ -181,7 +181,7 @@
 		<div class="card">
 			<img class="card-img-top" src="{% static 'images/placement.jpg' %}">
 			<div class="card-body">
-				<p class="card-text">this is an example of placement brochure.</p>
+				<p class="card-text">Take a look at our placement brochure.</p>
 				<a href="{% static 'images/placement.jpg' %}" class="btn btn-outline-secondary" download>Download</a>
 			</div>
 		</div>
