--- a/static/css/first-new.css
+++ b/static/css/first-new.css
@@ -26,13 +26,10 @@ body{
 	color: #ffffff;
 	font-weight: 700;
 }
-.form-control{
-	font-weight: 500;
-	border:  1px solid grey;
-	color: #f9f0f1;
-
-
-
+.form-control {
+    font-weight: 500;
+    border: 1px solid grey;
+    color: #273c52;
 }
 .heading{
 	text-align: center;
