--- a/mainapp/templates/mainapp/register1.html
+++ b/mainapp/templates/mainapp/register1.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="{% static 'css/first-new.css' %}">
   <link href="https://fonts.googleapis.com/css?family=Audiowide" rel="stylesheet">
 	<link rel="icon" href="{% static 'images/alumin.jpg' %}">
+  <script src="reg1.js"></script>
 </head>
 <body background="{% static 'css/form.JPG' %}">
   <form method="post"  class="simple-form">
