--- a/mainapp/templates/mainapp/event.html
+++ b/mainapp/templates/mainapp/event.html
@@ -17,8 +17,8 @@
       <a class="navbar-brand" href="#">GEC EVENTS</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="#">HOME</a></li>
-      <li><a href="#">INVENTO</a></li>
+      <li ><a href="#">HOME</a></li>
+      <li class="active"><a href="#">INVENTO</a></li>
       <li><a href="#">ETERNO</a></li>
       <li><a href="#">DHAKSHA</a></li>
     </ul>
@@ -31,7 +31,7 @@
 
   <div class="w3-row-padding w3-section">
     <div class="w3-col s4">
-      <img class="demo w3-opacity w3-hover-opacity-off" src="invento.jpg" style="width:100%;cursor:pointer" onclick="currentDiv(1)">
+      <img class="demo w3-opacity w3-hover-opacity-off" src="images/college1.JPG" style="width:100%;cursor:pointer" onclick="currentDiv(1)">
     </div>
     <div class="w3-col s4">
       <img class="demo w3-opacity w3-hover-opacity-off" src="slide1.jpg" style="width:100%;cursor:pointer" onclick="currentDiv(2)">
