--- a/templates/index.html
+++ b/templates/index.html
@@ -122,26 +122,7 @@
 <br>
 <br>
 <!-- Invento -->
-<div class="container-fluid padding">
-	<div class="row padding">
-		<div class="col-lg-6">
-			<h1>About Invento</h1>
-		</div>
-		<br>
-		<br>
-</div>
-<div class="row padding">
-	<div class="col-md-12 col-lg-6">
-		<p class="lead">Born in the year 2012, INVENTO is the national level annual techno-management festival of Government Engineering College Palakkad, Kerala. The affair calls for indefinite hard work of the students to bring about technological and cultural brilliance upon the institute. Hosted in the month of March it lays premise for numerous activities such as events, workshops, projects, presentations and exhibitions. Since its establishment, INVENTO has been followed up in the years 2016 and 2017 whose appreciable success opened doors to INVENTO18 as well. During its lifetime the techfest has managed to expand the knowledge zone and inculcate innovative ideas in students, deliver marks of excellence to the foundation and fulfil the responsibility of emerging engineers towards the society.</p>
-		<br>
- <a href="#" class="btn btn-primary">Learn More</a>
-	</div>
-<br>
-	<div class="col-lg-6">
-		<img src="{% static 'images/2.jpg' %}" class="img-fluid">
-	</div>
-	</div>
-</div>
+
 <!-- eterno -->
 <div class="container-fluid padding">
 	<div class="row padding">
@@ -165,6 +146,27 @@
 </div>
 <br>
 <br>
+<!-- Alumni interview -->
+<div class="alumni_interview">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-sm-12 pull-right">
+                <div class="interview-wrapper">
+                    <div class="interview-title">
+                        <h2 class="heading-light text-capitalize">Alumni Stories</h2>
+                    </div>
+                    <div class="interview-desc text-left">
+                        <p class="light">Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima.</p>
+                    </div>
+                    <div class="interview-see-story">
+                        <a href="#" class="btn btn-outline-warning see-story bnt text-uppercase">SEE ALUMNI STORIES</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <!-- Placement Broshure -->
 <div class="container-fluid padding">
 	<div class="row welcome text-center">
