--- a/templates/index.html
+++ b/templates/index.html
@@ -30,6 +30,17 @@
       <li class="nav-item">
       <a class="nav-link" href="#registration">Registration</a>
   		</li>
+  		 <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Events
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Daksha</a>
+          <a class="dropdown-item" href="#">Invento</a>
+          <a class="dropdown-item" href="#">Eterno</a>
+
+         
+      </li>
    		<li class="nav-item">
       <a class="nav-link" href="#contact_us">Contact Us</a>
   		</li>
@@ -156,7 +167,7 @@
                         <h2 class="heading-light text-capitalize">Alumni Stories</h2>
                     </div>
                     <div class="interview-desc text-left">
-                        <p class="light">Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima.</p>
+                        <p class="light">We bring in front of you succssful stories and experiences of our reputed alumni. Here we share alumni stories which could prove to be a great inspiration for our students.</p>
                     </div>
                     <div class="interview-see-story">
                         <a href="#" class="btn btn-outline-warning see-story bnt text-uppercase">SEE ALUMNI STORIES</a>
@@ -165,6 +176,30 @@
             </div>
         </div>
     </div>
+</div>
+
+<!-- connect today -->
+<br>
+<br>
+
+<div class="twitter-stream">
+	<div class="container">
+		<div class="twitter-wrapper text-center">
+			<div class="twitter-icon color-theme">
+				<i class="fab fa-twitter" aria-hidden="true">
+				</i>
+			</div>
+			<div class="twitter-content">
+				<div class="twitter-desc">
+					<pre class="pre"><p class="float-sm-left">
+"Connect Today...
+   Transform Tomorrow..."
+										</p>
+							</pre>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
 
 <!-- Placement Broshure -->
